Moved the final controllers across to the new pattern
